Extend GatewayList items with stat notification
Added stat notification in gateway list items
